fixed .nav-logo and .menu-button alignment

--- a/css/index.css
+++ b/css/index.css
@@ -161,9 +161,10 @@ body {
   color: #FFFFFF;
   position: fixed;
 }
-.main-navigation h3 {
+.main-navigation .nav-logo {
   font-size: 2.4rem;
   font-weight: bold;
+  margin-left: 43px;
 }
 .main-navigation .nav-container {
   background-color: darkgray;
@@ -174,6 +175,7 @@ body {
 }
 .main-navigation .nav-container .menu-button {
   height: max-content;
+  margin-right: 126px;
 }
 .main-navigation .nav-container .nav-link {
   display: none;
