--- a/less/nav.less
+++ b/less/nav.less
@@ -4,9 +4,10 @@
   color: #FFFFFF;
   position: fixed;
 
-  h3 {
+  .nav-logo {
     font-size: 2.4rem;
     font-weight: bold;
+    margin-left: 43px;
   }
 
   .nav-container {
@@ -18,6 +19,7 @@
 
       .menu-button {
         height: max-content;
+        margin-right: 126px;
       };
 
       .nav-link {
